# sitecore-weekly.github.io

./: .travis.yml  404.html  LICENSE.md  README.md  deploy.sh  index.html  site.hs  sitecore-weekly.cabal
css/: hyde.css  poole.css  syntax.css
posts/: 2015-11-25-test-page.md  2015-12-01-This-Week-in-Sitecore-1.md  2017-12-01-This-Week-in-Sitecore-1.html  2017-12-01-This-Week-in-Sitecore-1.md  2017-12-08-This-Week-in-Sitecore-2.html  2017-12-08-This-Week-in-Sitecore-2.md  2017-12-15-This-Week-in-Sitecore-3.html  2017-12-15-This-Week-in-Sitecore-3.md  2017-12-15-This-Week-in-Sitecore-4.md  2017-12-22-This-Week-in-Sitecore-4.html  2017-12-22-This-Week-in-Sitecore-4.md  2017-12-27-This-Week-in-Sitecore-5.html  2017-12-27-This-Week-in-Sitecore-5.md  2017-12-29-This-Week-in-Sitecore-5.html  2017-12-29-This-Week-in-Sitecore-5.md  2018-01-05-This-Week-in-Sitecore-6.html  2018-01-05-This-Week-in-Sitecore-6.md  2018-01-12-This-Week-in-Sitecore-7.html  2018-01-12-This-Week-in-Sitecore-7.md  2018-01-19-This-Week-in-Sitecore-8.html  2018-01-19-This-Week-in-Sitecore-8.md  2018-01-26-This-Week-in-Sitecore-9.html  2018-01-26-This-Week-in-Sitecore-9.md  2018-02-02-This-Week-in-Sitecore-10.html  2018-02-02-This-Week-in-Sitecore-10.md  2018-02-09-This-Week-in-Sitecore-11.html  2018-02-09-This-Week-in-Sitecore-11.md  2018-02-16-This-Week-in-Sitecore-12.html  2018-02-16-This-Week-in-Sitecore-12.md  2018-02-23-This-Week-in-Sitecore-13.html  2018-02-23-This-Week-in-Sitecore-13.md  2018-03-02-This-Week-in-Sitecore-14.html  2018-03-02-This-Week-in-Sitecore-14.md  (+8 more)
templates/: default.html  (+2 more)
