name:                sitecore-weekly
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            http://sitecore-weekly.github.io
license:             MIT
license-file:        LICENSE.md
author:              Alexandr Serogin and Konstantin Bibik
maintainer:          alexandrserogin@gmail.com
copyright:           2017 aserogin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable sitecore-weekly
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
